add authorization for UI